--- a/Block_IT.html
+++ b/Block_IT.html
@@ -37,7 +37,7 @@
       </video>
       <div class="uvod-hero-content" id="IT_animate-id">
         <h1 lang-code="02001">.Informačné technológie</h1>
-        <p lang-code="02002">.Spoľahlivá a efektívna podpora v oblasti riešení informačných technológií doma aj v zahraničí.</p>
+        <p lang-code="02002">Effective IT support that expands your possibilities.</p>
       </div>
     </section>
   </div>
