--- a/Block_Menu.html
+++ b/Block_Menu.html
@@ -82,7 +82,7 @@
       </video>
       <div class="uvod-hero-content" id="uvod-hero_animate-id">
         <h1 lang-code="00110">.Váš spoľahlivý  partner pre služby v oblasti inžinieringu a IT</h1>
-        <p lang-code="00111">.Spoľahlivá a efektívna podpora v oblasti riešení technických úloh doma aj v zahraničí.</p>
+        <p lang-code="00111">Inžinierske a IT riešenia postavené na skúsenostiach a inováciách.</p>
 		<p></p>
       </div>
     </section>
