--- a/Block_Ref3.html
+++ b/Block_Ref3.html
@@ -23,7 +23,8 @@
 
 	<link rel="stylesheet" href="root.css">
 	<link rel="stylesheet" href="animator.css">
-	<link rel="stylesheet" href="ref3.css">
+	<!-- <link rel="stylesheet" href="ref3.css"> -->
+	<link rel="stylesheet" href="ref-flex.css">
 	<link rel="stylesheet" href="ref-tooltip.css">
 
 	<script src="Language.js" defer></script>
@@ -33,9 +34,9 @@
 <body>
 	<div id="Ref3-div-src">
 		<div id="id-Block_Ref3" style="scroll-margin-top: 80px;"></div>
-		<div class="ref3-body">
-			<div class="ref3-header">
-				<div class="ref3-line-with-img">
+		<div class="ref-flex-body" style="background-color: #f8f8f8;">
+			<div class="ref-flex-header">
+				<div class="ref-flex-line-with-img">
 					<div>
 						<h2 lang-code="07017">.Všeobecné strojárstvo</h2>
 						<p lang-code="07018">.Jednoúčelové zariadenia a technologické celky na mieru</p>
@@ -43,20 +44,18 @@
 					<img src="media/IkonaObrabaciehoStroja.png" alt="Ikona obrabacieho stroja">
 				</div>
 			</div>
-			<div class="ref3-animate-line"></div>
+			<div class="ref-flex-animate-line"></div>
 
-			<div class="ref3-content-flex">
-				<div class="ref3-left">
-					<div class="ref3-left-group ">
-						<img src="media/RobotickaRuka_dopravnik_blue.avif" class="ref3-img1" />
-						<img src="media/portrait-male-engineer-working-field-engineers-day-celebration.avif" class="ref3-img2" />
-					</div>
+			<div class="ref-flex-content-flex">
+				<div class="ref-flex-img-wrapper">
+					<img src="media/RobotickaRuka_dopravnik_blue.avif" class="ref-flex-img1" />
+					<!-- <img src="media/portrait-male-engineer-working-field-engineers-day-celebration.avif" class="ref-flex-img2" /> -->
 				</div>
 
-				<div class="ref3-divider"></div>
+				<div class="ref-flex-divider"></div>
 
 				<!-- ************************************************************************ -->
-				<div class="ref3-right">
+				<div class="ref-flex-grid-wrapper">
 					<div class="ref-tooltip-grid columns-3">
 
 						<div class="ref-tooltip-container">
@@ -225,7 +224,7 @@
 						</div>
 
 					</div>
-					<div style="text-align: right;">
+					<div class="ref-flex-link-to-menu">
 						<a href="#id_refMenu" lang-code="07022">Hore k menu</a>
 					</div>
 				</div>
@@ -238,7 +237,7 @@
 			// Načítanie prekladov po načítaní DOM
 			await LoadTranslations('translations07-ref.txt');
 			await UpdateTexts();
-			Animator.registerAll(".ref3-animate-line", "animate-width-grow");
+			Animator.registerAll(".ref-flex-animate-line", "animate-width-grow");
 		});
 	</script>
 
