--- a/Block_Uvod1.html
+++ b/Block_Uvod1.html
@@ -36,9 +36,9 @@
 				</div>
 				<div class="uvod1-right-column">
 					<div class="uvod1-right-img-wrapper">
-						<div class="uvod1-right-img">
+						<!-- <div class="uvod1-right-img"> -->
 							<img src="media/PisanieNaNotebookuModre-80-15.avif" alt="Obrazok 1" />
-						</div>
+						<!-- </div> -->
 					</div>
 				</div>
 			</div>
