--- a/indexRef.html
+++ b/indexRef.html
@@ -29,11 +29,12 @@
 	<link rel="stylesheet" href="menu.css">
 	<link rel="stylesheet" href="UvodHero.css">
 	<link rel="stylesheet" href="ref.css">
-	<link rel="stylesheet" href="ref1.css">
+	<link rel="stylesheet" href="ref-flex.css">
+	<!-- <link rel="stylesheet" href="ref1.css">
 	<link rel="stylesheet" href="ref2.css">
 	<link rel="stylesheet" href="ref3.css">
 	<link rel="stylesheet" href="ref4.css">
-	<link rel="stylesheet" href="ref5.css">
+	<link rel="stylesheet" href="ref5.css"> -->
 	<!-- <link rel="stylesheet" href="ref-ovl.css"> -->
 	<link rel="stylesheet" href="ref-tooltip.css">
 	<link rel="stylesheet" href="footer.css">
@@ -110,12 +111,12 @@
 			await UpdateTexts();
 			await new Promise(requestAnimationFrame);
 			Animator.register("#referencie_animate-id", "animate-slide-in-bounce");
-			Animator.registerAll(".ref1-animate-line", "animate-width-grow");
-			Animator.registerAll(".ref2-animate-line", "animate-width-grow");
-			Animator.registerAll(".ref3-animate-line", "animate-width-grow");
-			Animator.registerAll(".ref4-animate-line", "animate-width-grow");
-			Animator.registerAll(".ref5-animate-line", "animate-width-grow");
-			Animator.registerAll(".footer-line", "animate-width-grow");
+			Animator.registerAll(".ref-flex-animate-line", "animate-width-grow");
+			// Animator.registerAll(".ref2-animate-line", "animate-width-grow");
+			// Animator.registerAll(".ref3-animate-line", "animate-width-grow");
+			// Animator.registerAll(".ref4-animate-line", "animate-width-grow");
+			// Animator.registerAll(".ref5-animate-line", "animate-width-grow");
+			// Animator.registerAll(".footer-line", "animate-width-grow");
 			// Animator.register("#id-footer-hero-content", "animate-rotateFlipIn");
 
 			const rawHash = window.location.hash.substring(1); // "id-Block_Ref1?x=5&y=6"
