--- a/Block_Ref.html
+++ b/Block_Ref.html
@@ -10,20 +10,35 @@
 		html {
 			scroll-behavior: smooth;
 		}
+		body {
+			margin: 0;
+			font-family: 'Poppins', 'Open Sans', Arial, Tahoma, sans-serif;
+		}
 	</style>
 	<link rel="stylesheet" href="fonts-poppins.css" />
 	<link rel="stylesheet" href="fonts-open-sans.css">
 
 	<link rel="stylesheet" href="root.css">
 	<link rel="stylesheet" href="ref.css">
+	<link rel="stylesheet" href="animator.css">
 
 	<script src="Language.js" defer></script>
+	<script src="animator.js" defer></script>
 </head>
 
 <body>
+	<div id="Ref-Onas3-div-src">
+		<div class="ref-onas3-wrapper">
+			<div class="ref-onas3-header-line"></div>
+			<div id="id-ref-onas3-animate" class="ref-onas3-nadpis" style="transform-style: preserve-3d; transform: rotateX(-90deg) rotateY(10deg);">
+				<h2 lang-code="00304">Referencie:</h2>
+			</div>
+		</div>
+	</div>
+
 	<div id="Ref-div-src">
 		<div id="id-Block_Ref"></div>
-		<div class="ref-body">
+		<div class="ref-body">					
 			<div class="ref-grid1">
 
 				<div class="ref-col">
@@ -82,20 +97,6 @@
 					</div>
 				</div>
 
-				<!-- <div class="ref-col">
-					<div class="ref-p1">
-						<img src="media/ai-robot-interacting-with-futuristic-data-interface.avif" alt="Robot" />
-						<div class="ref-triangle"></div>
-					</div>
-					<div class="ref-t1">
-						<div class="ref-text">
-							<h2 lang-code="07019">.Robotika</h2>
-							<span lang-code="07020">.Automatizácia, robotika, simulácie, elektrický dizajn</span>
-							<a href="indexRef.html#id-Block_Ref5" class="ref-button" lang-code="07021">Viac</a>
-						</div>
-					</div>
-				</div> -->
-
 			</div>
 		</div>
 	</div>
@@ -103,6 +104,8 @@
 		document.addEventListener("DOMContentLoaded", async () => {
 			await LoadTranslations('translations07-ref.txt');
 			await UpdateTexts();
+			Animator.register("#id-ref-onas3-animate", "animate-rotateFlipIn");
+			Animator.registerAll(".ref-onas3-header-line", "animate-width-grow");
 		});
 	</script>
 </body>
