--- a/indexOnas.html
+++ b/indexOnas.html
@@ -15,7 +15,6 @@
 			margin: 0;
 			font-family: "Poppins", "Open sans", Arial, Tahoma, sans-serif;
 		}
-
 		/*visibility sa vrati az po nacitani*/
 	</style>
 
@@ -26,20 +25,19 @@
 	<link rel="stylesheet" href="onas1.css">
 	<link rel="stylesheet" href="onas2.css">
 	<link rel="stylesheet" href="onas3ref.css">
-	<link rel="stylesheet" href="klienti.css">
 	<link rel="stylesheet" href="ref.css">
 	<link rel="stylesheet" href="footer.css">
 
-	<!-- Nasledovne scripty s defer sa spracuju az po nacitani celeho body tesne pred udalostou DOMConentLoaded-->
-	<script src="Language.js" defer></script> <!-- funkcie js: prepinanie jazykov  SK / DE / EN -->
-	<script src="animator.js" defer></script> <!-- funkcie js: animacie -->
-	<script src="menu.js" defer></script> <!-- funkcie js: ovladanie menu -->
+	<script src="Language.js" defer></script>
+	<script src="animator.js" defer></script>
+	<script src="menu.js" defer></script>
 	<script src="wordpress_footer.js" defer></script> <!-- Nacitanie a spracovanie ponuk od WordPressu-->
 	<script src="onas2.js" defer></script> <!-- modalne okno s certifikatom -->
 </head>
 
 <body>
 	<div id="top"></div>
+
 	<div id="Menu-div-dst">
 	</div>
 
@@ -55,10 +53,7 @@
 	<div id="Onas2-div-dst">
 	</div>
 
-	<!-- <div id="Klienti-div-dst">
-	</div> -->
-
-	<div id="Onas3Ref-div-dst">
+	<div id="Ref-Onas3-div-dst">
 	</div>
 
 	<div id="Ref-div-dst">
@@ -67,7 +62,7 @@
 	<div id="Footer-div-dst">
 	</div>
 
-	<script src="ImportBlock.js" type="text/javascript"></script> <!-- funkcie js: importovanie blokov -->
+	<script src="ImportBlock.js" type="text/javascript"></script>
 	<script src="scrolly_save.js" type="text/javascript"></script> <!-- zapamata aktualnu poziciu, aby to po F5 neskocilo na zaciatok -->
 
 	<script>
@@ -77,11 +72,10 @@
 			const p3 = ImportDiv("Block_Uvod1.html", "Uvod1-div-src", "Uvod1-div-dst");
 			const p4 = ImportDiv("Block_Onas1.html", "Onas1-div-src", "Onas1-div-dst");
 			const p5 = ImportDiv("Block_Onas2.html", "Onas2-div-src", "Onas2-div-dst");
-			// const p6 = ImportDiv("Block_Klienti.html", "Klienti-div-src", "Klienti-div-dst");
-			const p6 = ImportDiv("Block_Onas3Ref.html", "Onas3Ref-div-src", "Onas3Ref-div-dst");
+			const p6 = ImportDiv("Block_Ref.html", "Ref-Onas3-div-src", "Ref-Onas3-div-dst");
 			const p7 = ImportDiv("Block_Ref.html", "Ref-div-src", "Ref-div-dst");
 			const p8 = ImportDiv("Block_Footer.html", "Footer-div-src", "Footer-div-dst");
-			await Promise.all([p1, p2, p3, p4, p5, p7, p8]); // vsetky ImportDiv mozu bezat paralelne
+			await Promise.all([p1, p2, p3, p4, p5, p7, p8]);
 		}
 	</script>
 
@@ -98,13 +92,10 @@
 			await UpdateTexts();
 			await new Promise(requestAnimationFrame);
 			Animator.register("#uvod-hero_animate-id", "animate-slide-in-bounce");
-			// Animator.register("#id-footer-hero-content", "animate-rotateFlipIn");
-			Animator.register("#id-klienti-animate", "animate-rotateFlipIn");
-			Animator.register("#id-onas3ref-animate", "animate-rotateFlipIn");
+			Animator.register("#id-ref-onas3-animate", "animate-rotateFlipIn");
 			Animator.registerAll(".onas1-header-line", "animate-width-grow");
 			Animator.registerAll(".onas2-header-line", "animate-width-grow");
-			Animator.registerAll(".onas3ref-header-line", "animate-width-grow");
-			Animator.registerAll(".footer-line", "animate-width-grow");
+			Animator.registerAll(".ref-onas3-header-line", "animate-width-grow");
 			Animator.register("#idCertificateBtn", "animate-double-shake");
 			onas2_initModal();
 			restoreScrollYPosition(); // navrat na poziciu, na ktorej bolo stlacene F5
