--- a/Block_Kontakt3.html
+++ b/Block_Kontakt3.html
@@ -51,7 +51,7 @@
 				</div>
 				<div class="kontakt3-cell align-top" id="id-kontakt-Kracala">
 					<div class="align-top">
-						<p lang-code="05054">.Externá konštrukcia a IT služby:</p>
+						<p lang-code="05054">.Externá konštrukcia, automatizácia, robotika a IT služby:</p>
 					</div>
 					<div class="align-bottom">
 						<!-- <p>Ing. Peter Kráčala</p>
@@ -62,7 +62,7 @@
 				</div>
 				<div class="kontakt3-cell align-top" id="id-kontakt-Ivaska">
 					<div class="align-top">
-						<p lang-code="05055">.Externá konštrukcia a IT služby:</p>
+						<p lang-code="05054">.Externá konštrukcia, automatizácia, robotika a IT služby:</p>
 					</div>
 					<div class="align-bottom">
 						<!-- <p>Ing. Jaroslav Ivaška</p>
