--- a/Block_Menu.html
+++ b/Block_Menu.html
@@ -28,7 +28,9 @@
     <!-- Horná lišta -->
     <div class="uvod-topbar">
       <div class="uvod-topbar-logo">
-        <img src="media/logo-biela-30px-enitech.png" alt="Logo Enitech">
+		<a href="index.html">
+        	<img src="media/logo-biela-30px-enitech.png" alt="Logo Enitech">
+		</a>
       </div>
       <div class="uvod-topbar-langs">
         <span class="uvod-lang" onclick="setLang('sk')">
@@ -47,7 +49,7 @@
         <a href="indexIT.html#top" lang-code="00103">.IT služby</a>
         <a href="indexManage.html#top" lang-code="00104">.Manažérske služby</a>
         <a href="indexRef.html#top" lang-code="00105">.Referencie</a>
-        <a href="indexKariera.html#top" lang-code="00106">.Kariéra</a>
+        <a href="indexKariera.html" lang-code="00106">.Kariéra</a>
         <a href="indexKontakt.html#top" lang-code="00107">.Kontakt</a>
       </nav>
       <div class="uvod-hamburger" onclick="toggleMenu()">
