--- a/Block_EnginInt3.html
+++ b/Block_EnginInt3.html
@@ -4,13 +4,14 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Block_EnginInt3.html</title>
+	<title>test_EnginInt3.html</title>
 	<link rel="icon" href="favicona-enitech.png" />
 
 	<link rel="stylesheet" href="fonts-poppins.css" />
 	<link rel="stylesheet" href="fonts-open-sans.css">
 	<link rel="stylesheet" href="animator.css">
-	<link rel="stylesheet" href="enginint3.css">
+	<!-- <link rel="stylesheet" href="enginint3.css"> -->
+	<link rel="stylesheet" href="engin.css">
 
 	<script src="Language.js" defer></script>
 	<script src="animator.js" defer></script>
@@ -29,35 +30,30 @@
 
 <body>
 	<div id="EnginInt3-div-src">
-		<div class="enginint3-body">
-			<div class="enginint3-header-line"></div>
+		<div class="engin-body color-variant-enginint3">
+			<div class="engin-header-line"></div>
 
-			<div class="enginint3-content">
-				<div class="enginint3-left">
-					<div class="enginint3-img-wrapper">
+			<div class="engin-content-flex column-reverse">
+				<div class="engin-img-wrapper">
+					<div class="engin-img-wrapper-inner">
 						<img src="media/InternaKonstrukcia-prechod.avif"/>
 					</div>
 				</div>
 
-				<div class="enginint3-divider"></div>
+				<div class="engin-divider"></div>
 
-				<div class="enginint3-right">
-					<div class="enginint3-line-with-img">
-						<!-- <h3 lang-code="01301">Interná konštrukcia</h3> -->
+				<div class="engin-text-wrapper">
+					<div class="engin-line-with-img">
 						 <strong lang-code="01302">Komplexné návrhy</strong>
-						<!-- <img src="media/Auticko.png" alt="Ikona auticka"> -->
 						<img src="media/car-icon.png" alt="Ikona auticka">
 					</div>
-					<!-- <p>
-						<strong lang-code="01302">Komplexné návrhy</strong>
-					</p> -->
 					<ul class="custom-list">
 						<li lang-code="01303">upínacích prípravkov </li>
 						<li lang-code="01304">montážnych a manipulačných prípravkov</li>
 						<li lang-code="01305">meracích a kontrolných prípravkov</li>
 						<li lang-code="01306">testovacích prípravkov</li>
 					</ul>
-					<div class="enginint3-more-info-container">
+					<div class="engin-more-info-container">
 						<a href="indexKontakt.html#id-kontakt-Deak" class="animate-text-underline" lang-code="01307">Viac informácií</a>
 					</div>
 				</div>
@@ -67,7 +63,7 @@
 
 	<script>
 		async function loadAllTranslations() {
-			const p1 = await LoadTranslations('translations00.txt');
+			const p1 = await LoadTranslations('translations01-engin.txt');
 			await Promise.all([p1]);
 		}
 	</script>
@@ -76,7 +72,7 @@
 			await loadAllTranslations();
 			await UpdateTexts();
 			await new Promise(requestAnimationFrame);
-			Animator.registerAll(".enginint3-header-line", "animate-width-grow");
+			Animator.registerAll(".engin-header-line", "animate-width-grow");
 			document.body.style.visibility = "visible";
 		});
 	</script>
