--- a/Block_Footer.html
+++ b/Block_Footer.html
@@ -22,7 +22,7 @@
 
 	<script src="Language.js" defer></script>
 	<script src="animator.js" defer></script>
-	<script src="wordpress_footer.js" defer></script> <!-- Nacitanie a spracovanie ponuk od WordPressu-->
+	<!-- <script src="wordpress_footer.js" defer></script> --> <!-- Nacitanie a spracovanie ponuk od WordPressu-->
 </head>
 
 <body>
@@ -36,20 +36,20 @@
 			</div>
 		</div> -->
 
-		<!-- Footer -->
 		<footer class="footer">
 			<div class="footer-grid">
 
 				<!-- Logo -->
-				<div class="footer-column footer-logo">
+				<!-- <div class="footer-column footer-logo">
 					<div class="footer-logo-box">
 						<a href="index.html">
 							<img src="media/logo-biela-18px-enitech.png" alt="logo Enitech">
 						</a>
 					</div>
-				</div>
+				</div> -->
 
-				<!-- Menu -->
+				<div></div>
+
 				<div class="footer-column">
 					<h4>Menu</h4>
 					<ul>
@@ -58,20 +58,22 @@
 						<li><a href="indexIT.html#top" lang-code="00103">.IT služby</a></li>
 						<li><a href="indexManage.html#top" lang-code="00104">.Manažérske služby</a></li>
 						<li><a href="indexRef.html#top" lang-code="00105">.Referencie</a></li>
-						<li><a href="indexKariera.html#top" lang-code="00106">.Kariéra</a></li>
+						<li><a href="indexKariera.html" lang-code="00106">.Kariéra</a></li>
 						<li><a href="indexKontakt.html#top" lang-code="00107">.Kontakt</a></li>
 					</ul>
 				</div>
 
-				<!-- Kariéra -->
 				<div class="footer-column">
 					<h4 lang-code="00106">.Kariéra</h4>
-					<ul id="id-ul-ponuky">
+					<!-- <ul id="id-ul-ponuky">
 						<li lang-code="09003">.Načítavam ponuky...</li>
+					</ul> -->
+					<ul>
+						<li><a href="indexKariera.html?category=it" lang-code="09010">Pracovné ponuky IT</a></li>
+						<li><a href="indexKariera.html?category=eng" lang-code="09011">Pracovné ponuky Inžiniering</a></li>
 					</ul>
 				</div>
 
-				<!-- Kontakt -->
 				<div class="footer-column">
 					<h4 lang-code="00107">.Kontakt</h4>
 					<p>
@@ -82,6 +84,8 @@
 					</p>
 					<p class="footer-email-link">📧 <a href="mailto:office@enitech.sk">office@enitech.sk</a></p>
 				</div>
+
+				<div></div>
 
 			</div>
 
@@ -98,15 +102,13 @@
 
 	<script>
 		document.addEventListener("DOMContentLoaded", async () => {
-			// Načítanie prekladov po načítaní DOM
-			await Footer_fill_ponuky();
+			// await Footer_fill_ponuky();
 			await LoadTranslations('translations00.txt');
 			await LoadTranslations('translations01.txt');
 			await LoadTranslations('translations09-foot.txt');
 			await UpdateTexts();
-			await new Promise(requestAnimationFrame); // Môžeš počkať na ďalší repaint, ak chceš jemnejší prechod (voliteľné)
-			// Spustenie animácie
-			Animator.register("#id-footer-hero-content", "animate-rotateFlipIn"); // znak # znamená: "element s id"
+			await new Promise(requestAnimationFrame);
+			Animator.register("#id-footer-hero-content", "animate-rotateFlipIn");
 			Animator.registerAll(".footer-line", "animate-width-grow");
 			document.body.style.visibility = "visible"; // zobraz stránku až teraz    
 		});
