--- a/Block_Kariera.html
+++ b/Block_Kariera.html
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" href="root.css">
 	<link rel="stylesheet" href="animator.css">
 	<link rel="stylesheet" href="kariera.css">
+	<link rel="stylesheet" href="karieracv.css">
 	<link rel="stylesheet" href="formular.css">
 
 	<script src="Language.js" defer></script> <!-- funkcie js: prepinanie jazykov  SK / DE / EN -->
@@ -72,14 +73,20 @@
 	</div>
  	<script src="ImportBlock.js" type="text/javascript"></script>
 	<script>
-		document.addEventListener("DOMContentLoaded", async () => { // zabalene do anonymnej async () => {} funkcie, aby bolo mozne volat "await"
+		document.addEventListener("DOMContentLoaded", async () => {
 			kariera_registerButtons();
+
+			// Prečítanie URL parametra "category" (it alebo eng) (volanie stylom "indexKariera.html?category=eng")
+			const params = new URLSearchParams(window.location.search);
+			const catParam = params.get("category");
+			setCategoryExtern(catParam);
+
             await ImportDiv("Block_KarieraCV.html", "KarieraCV-div-src", "KarieraCV-div-dst");
 			await openProjects_fetchPosts(); // naplni kariera-grid, kariera-detail, kariera-pagination
 			await LoadTranslations('translations05-kontakt.txt');
 			await LoadTranslations('translations08-kar.txt');
 			await UpdateTexts();
-			await KarieraCV_addEventListeners();
+			// await KarieraCV_addEventListeners();
       		Animator.registerAll(".formular-animate-line", "animate-width-grow");
 			document.body.style.visibility = "visible";
 		});    
