--- a/indexEngin.html
+++ b/indexEngin.html
@@ -6,7 +6,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--klucove pre mobilne zariadenia-->
 	<title>indexEngin.html</title>
 	<link rel="icon" href="favicona-enitech.png">
-	<!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet"> -->
 	<link rel="stylesheet" href="fonts-poppins.css" />
 	<link rel="stylesheet" href="fonts-open-sans.css">
 	<link rel="stylesheet" href="root.css">
@@ -16,27 +15,26 @@
 			margin: 0;
 			font-family: "Poppins", "Open sans", Arial, Tahoma, sans-serif;
 		}
-
 		/*visibility sa vrati az po nacitani*/
 	</style>
 
 	<link rel="stylesheet" href="animator.css">
 	<link rel="stylesheet" href="menu.css">
 	<link rel="stylesheet" href="UvodHero.css">
-	<link rel="stylesheet" href="enginint1.css">
+	<link rel="stylesheet" href="engin.css">
+	<!-- <link rel="stylesheet" href="enginint1.css">
 	<link rel="stylesheet" href="enginint2.css">
 	<link rel="stylesheet" href="enginint3.css">
 	<link rel="stylesheet" href="enginint4.css">
 	<link rel="stylesheet" href="enginext1.css">
 	<link rel="stylesheet" href="enginelekt1.css">
-	<link rel="stylesheet" href="enginautom1.css">
+	<link rel="stylesheet" href="enginautom1.css"> -->
 	<link rel="stylesheet" href="footer.css">
 
-	<!-- Nasledovne scripty s defer sa spracuju az po nacitani celeho body tesne pred udalostou DOMConentLoaded-->
-	<script src="Language.js" defer></script> <!-- funkcie js: prepinanie jazykov  SK / DE / EN -->
-	<script src="animator.js" defer></script> <!-- funkcie js: animacie -->
-	<script src="menu.js" defer></script> <!-- funkcie js: ovladanie menu -->
-	<script src="wordpress_footer.js" defer></script> <!-- Nacitanie a spracovanie ponuk od WordPressu-->
+	<script src="Language.js" defer></script>
+	<script src="animator.js" defer></script>
+	<script src="menu.js" defer></script>
+	<!-- <script src="wordpress_footer.js" defer></script> -->
 </head>
 
 <body>
@@ -71,7 +69,7 @@
 	<div id="Footer-div-dst">
 	</div>
 
-	<script src="ImportBlock.js" type="text/javascript"></script> <!-- funkcie js: importovanie blokov -->
+	<script src="ImportBlock.js" type="text/javascript"></script> 
 	<script src="scrolly_save.js" type="text/javascript"></script> <!-- zapamata aktualnu poziciu, aby to po F5 neskocilo na zaciatok -->
 
 	<script>
@@ -86,12 +84,12 @@
 			const p8 = ImportDiv("Block_EnginElekt1.html", "EnginElekt1-div-src", "EnginElekt1-div-dst");
 			const p9 = ImportDiv("Block_EnginAutom1.html", "EnginAutom1-div-src", "EnginAutom1-div-dst");
 			const p10 = ImportDiv("Block_Footer.html", "Footer-div-src", "Footer-div-dst");
-			await Promise.all([p1, p2, p3, p4, p5, p6, p7, p8, p9, p10]); // vsetky ImportDiv mozu bezat paralelne
+			await Promise.all([p1, p2, p3, p4, p5, p6, p7, p8, p9, p10]);
 		}
 	</script>
 
 	<script>
-		document.addEventListener("DOMContentLoaded", async () => { // zabalene do anonymnej async () => {} funkcie, aby bolo mozne volat "await"
+		document.addEventListener("DOMContentLoaded", async () => { 
 			await loadDivBlocks();
 
 			await new Promise(requestAnimationFrame); // Spracovanie scriptu sa prerusi pri najblizsom frame cykle a prehliadac zacne "refreshovat" DOM, lebo toto vlakno ma vyssiu prioritu.
@@ -99,7 +97,7 @@
 			// await new Promise(requestAnimationFrame); "preskočí" všetky frame pokusy, ktoré sa nestihli kvôli JS, a čaká na najbližší VOĽNÝ frame po ukončení JS.
 			// frame cyklus trva kazdych 16ms a az ked je vsetko dokoncene (DOM + predchadzajuca cast js), tak nastane "await new Promise(requestAnimationFrame);"
 			// A vtedy mozem spustit dalsi script. Je to tzv. kooperativny multitasking
-			await Footer_fill_ponuky();
+			// await Footer_fill_ponuky();
 			await LoadTranslations('translations00.txt');
 			await LoadTranslations('translations01-engin.txt');
 			await LoadTranslations('translations09-foot.txt');
@@ -107,7 +105,7 @@
 			await new Promise(requestAnimationFrame);
 			Animator.register("#engin_animate-id", "animate-slide-in-bounce");
 			// Animator.register("#id-footer-hero-content", "animate-rotateFlipIn");
-			Animator.registerAll(".footer-line", "animate-width-grow");
+			// Animator.registerAll(".footer-line", "animate-width-grow");
 			Animator.registerAll(".enginint1-header-line", "animate-width-grow");
 			Animator.registerAll(".enginint2-header-line", "animate-width-grow");
 			Animator.registerAll(".enginint3-header-line", "animate-width-grow");
