--- a/indexKariera.html
+++ b/indexKariera.html
@@ -27,11 +27,10 @@
 	<link rel="stylesheet" href="formular.css">
 	<link rel="stylesheet" href="footer.css">
 
-	<!-- Nasledovne scripty s defer sa spracuju az po nacitani celeho body tesne pred udalostou DOMConentLoaded-->
-	<script src="Language.js" defer></script> <!-- funkcie js: prepinanie jazykov  SK / DE / EN -->
-	<script src="animator.js" defer></script> <!-- funkcie js: animacie -->
-	<script src="menu.js" defer></script> <!-- funkcie js: ovladanie menu -->
-	<script src="wordpress_footer.js" defer></script> <!-- Nacitanie a spracovanie ponuk od WordPressu-->
+	<script src="Language.js" defer></script>
+	<script src="animator.js" defer></script>
+	<script src="menu.js" defer></script>
+	<!-- <script src="wordpress_footer.js" defer></script>  -->
 	<script src="kariera.js" defer></script>
 	<script src="karieracv.js" type="text/javascript"></script>
 </head>
@@ -56,7 +55,7 @@
 	<div id="Footer-div-dst">
 	</div>
 
-	<script src="ImportBlock.js" type="text/javascript"></script> <!-- funkcie js: importovanie blokov -->
+	<script src="ImportBlock.js" type="text/javascript"></script>
 	<script src="scrolly_save.js" type="text/javascript"></script> <!-- zapamata aktualnu poziciu, aby to po F5 neskocilo na zaciatok -->
 
 	<script>
@@ -64,29 +63,32 @@
 			const p1 = ImportDiv("Block_Menu.html", "Menu-div-src", "Menu-div-dst");
 			const p2 = ImportDiv("Block_Kariera.html", "Kariera-div-src", "Kariera-div-dst");
 			const p3 = ImportDiv("Block_Footer.html", "Footer-div-src", "Footer-div-dst");
-			await Promise.all([p1, p2, p3]); // vsetky ImportDiv mozu bezat paralelne
+			await Promise.all([p1, p2, p3]);
 		}
 	</script>
 
 	<script>
-		document.addEventListener("DOMContentLoaded", async () => { // zabalene do anonymnej async () => {} funkcie, aby bolo mozne volat "await"
+		document.addEventListener("DOMContentLoaded", async () => {
 			await loadDivBlocks();
             await ImportDiv("Block_KarieraCV.html", "KarieraCV-div-src", "KarieraCV-div-dst");
 			kariera_registerButtons();
 
+			// Prečítanie URL parametra "category" (it alebo eng) (volanie stylom "indexKariera.html?category=eng")
+			const params = new URLSearchParams(window.location.search);
+			const catParam = params.get("category");
+			setCategoryExtern(catParam);
+
 			await new Promise(requestAnimationFrame);
 			await openProjects_fetchPosts();
-			await Footer_fill_ponuky();
+			// await Footer_fill_ponuky();
 			await LoadTranslations('translations00.txt');
 			await LoadTranslations('translations08-kar.txt');
 			await LoadTranslations('translations09-foot.txt');
 			await UpdateTexts();
 			await new Promise(requestAnimationFrame);
 			Animator.register("#kariera_animate-id", "animate-slide-in-bounce");
-			// Animator.register("#id-footer-hero-content", "animate-rotateFlipIn");
-			Animator.registerAll(".footer-line", "animate-width-grow");
 			restoreScrollYPosition(); // navrat na poziciu, na ktorej bolo stlacene F5
-			document.body.style.visibility = "visible"; // zobraz stránku až teraz    
+			document.body.style.visibility = "visible";
 		});    
 	</script>
 </body>
