--- a/indexKontakt.html
+++ b/indexKontakt.html
@@ -75,7 +75,7 @@
 
 			await new Promise(requestAnimationFrame);
 			// Načítanie prekladov po načítaní DOM
-			await Footer_fill_ponuky();
+			// await Footer_fill_ponuky();
 			await LoadTranslations('translations00.txt');
 			await LoadTranslations('translations05-kontakt.txt');
 			await LoadTranslations('translations09-foot.txt');
@@ -90,7 +90,7 @@
 			Animator.registerAll(".kontakt3-line", "animate-width-grow");
 			Animator.register("#id-kontakt2-animate-content", "animate-rotateFlipIn");
 			// Animator.register("#id-footer-hero-content", "animate-rotateFlipIn");
-			Animator.registerAll(".footer-line", "animate-width-grow");
+			// Animator.registerAll(".footer-line", "animate-width-grow");
 			// *** nový blok: oprava scrollu podľa hashu (ak je) ***
 			if (window.location.hash) {
 				const targetEl = document.querySelector(window.location.hash);
