--- a/indexManage.html
+++ b/indexManage.html
@@ -33,8 +33,7 @@
 	<link rel="stylesheet" href="manage.css">
 	<link rel="stylesheet" href="footer.css">
 
-	<!-- Nasledovne scripty s defer sa spracuju az po nacitani celeho body tesne pred udalosou DOMConentLoaded-->
-	<script src="menu.js" defer></script> <!-- funkcie js: ovladanie menu -->
+	<script src="menu.js" defer></script>
 	<script src="Language.js" defer></script>
 	<script src="animator.js" defer></script>
 </head>
@@ -59,18 +58,17 @@
 	<div id="Footer-div-dst">
 	</div>
 
-	<script src="ImportBlock.js" type="text/javascript"></script> <!-- funkcie js: importovanie blokov -->
+	<script src="ImportBlock.js" type="text/javascript"></script> 
 	<script src="scrolly_save.js" type="text/javascript"></script> <!-- zapamata aktualnu poziciu, aby to po F5 neskocilo na zaciatok -->
-	<script src="animator.js" defer></script> <!-- funkcie js: animacie -->
-	<script src="menu.js" defer></script> <!-- funkcie js: ovladanie menu -->
-	<script src="wordpress_footer.js" defer></script> <!-- Nacitanie a spracovanie ponuk od WordPressu-->
+	<script src="animator.js" defer></script> 
+	<script src="menu.js" defer></script> 
 
 	<script>
 		async function loadDivBlocks() {
 			const p1 = ImportDiv("Block_Menu.html", "Menu-div-src", "Menu-div-dst");
 			const p2 = ImportDiv("Block_Manage.html", "Manage-div-src", "Manage-div-dst");
 			const p3 = ImportDiv("Block_Footer.html", "Footer-div-src", "Footer-div-dst");
-			await Promise.all([p1, p2, p3]); // vsetky mozu bezat paralelne
+			await Promise.all([p1, p2, p3]);
 		}
 		async function loadAllTranslations() {
 			const p1 = LoadTranslations('translations00.txt');
@@ -84,14 +82,10 @@
 		document.addEventListener("DOMContentLoaded", async () => {
 			await loadDivBlocks();
 			await new Promise(requestAnimationFrame);
-			await Footer_fill_ponuky();
 			await loadAllTranslations();
 			await UpdateTexts();
-			// Spustenie animácie
-			Animator.registerAll(".footer-line", "animate-width-grow");
 			Animator.register("#management_animate-id", "animate-slide-in-bounce");
-			// Animator.register("#id-footer-hero-content", "animate-rotateFlipIn");
-			Animator.register("#id-Manag_animate-line", "animate-width-grow"); // doprava rastuce ciary
+			Animator.register("#id-Manag_animate-line", "animate-width-grow");
 			restoreScrollYPosition(); // navrat na poziciu, na ktorej bolo stlacene F5
 			document.body.style.visibility = "visible"; // zobraz stránku až teraz    
 		});
