--- a/indexRef.html
+++ b/indexRef.html
@@ -39,11 +39,10 @@
 	<link rel="stylesheet" href="ref-tooltip.css">
 	<link rel="stylesheet" href="footer.css">
 
-	<!-- Nasledovne scripty s defer sa spracuju az po nacitani celeho body tesne pred udalostou DOMConentLoaded-->
-	<script src="Language.js" defer></script> <!-- funkcie js: prepinanie jazykov  SK / DE / EN -->
-	<script src="animator.js" defer></script> <!-- funkcie js: animacie -->
-	<script src="menu.js" defer></script> <!-- funkcie js: ovladanie menu -->
-	<script src="wordpress_footer.js" defer></script> <!-- Nacitanie a spracovanie ponuk od WordPressu-->
+	<script src="Language.js" defer></script>
+	<script src="animator.js" defer></script> 
+	<script src="menu.js" defer></script> 
+	<!-- <script src="wordpress_footer.js" defer></script> -->
 </head>
 
 <body>
@@ -82,8 +81,8 @@
 	<div id="Footer-div-dst">
 	</div>
 
-	<script src="ImportBlock.js" type="text/javascript"></script> <!-- funkcie js: importovanie blokov -->
-	<script src="scrolly_save.js" type="text/javascript"></script> <!-- zapamata aktualnu poziciu, aby to po F5 neskocilo na zaciatok -->
+	<script src="ImportBlock.js" type="text/javascript"></script>
+	<script src="scrolly_save.js" type="text/javascript"></script> 
 
 	<script>
 		async function loadDivBlocks() {
@@ -99,11 +98,11 @@
 	</script>
 
 	<script>
-		document.addEventListener("DOMContentLoaded", async () => { // zabalene do anonymnej async () => {} funkcie, aby bolo mozne volat "await"
+		document.addEventListener("DOMContentLoaded", async () => { 
 			await loadDivBlocks();
 
 			await new Promise(requestAnimationFrame);
-			await Footer_fill_ponuky();
+			// await Footer_fill_ponuky();
 			await LoadTranslations('translations00.txt');
 			await LoadTranslations('translations01-engin.txt');
 			await LoadTranslations('translations07-ref.txt');
