--- a/Block_Onas2.html
+++ b/Block_Onas2.html
@@ -42,7 +42,7 @@
 					<!-- nový flex kontajner pre posledný odstavec + obrázok -->
 					<div class="onas2-left-last">
 						<p><span lang-code="00215">.V práci používame systém manažérstva bezpečnosti informácií</span>
-							<strong><span style="white-space: nowrap;">STN EN ISO/IEC 27001:2022</span></strong>
+							<strong><span style="white-space: nowrap;">ISO/IEC 27001:2022</span></strong>
 						</p>
 						<img src="media/CertificatedPQM.png" alt="Certificate PQM" class="onas2-official-stamp" id="idCertificateBtn">
 					</div>
